Use right rake task

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,7 @@ build_script:
   - appveyor AddCompilationMessage "Starting Build"
   - cd C:\projects\logstash
   - rake bootstrap
-  - rake install:core
+  - rake test:install-core
 
 branches:
   only:
