--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,9 +6,8 @@ os: Windows Server 2012 R2
 
 install:
   - set JAVA_HOME=C:\Program Files\Java\jdk1.8.0
-  - set PATH=C:\Ruby22\bin;%PATH%
-  - gem install bundler
-  
+  - set PATH=C:\jruby-9.0.0.0\bin;%PATH%
+
 build_script:
   - ruby -v
   - appveyor AddCompilationMessage "Starting Build"
