--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ install:
   - ci/travis_integration_install.sh
 before_script:
   - echo "--order rand" > .rspec
+  - echo "--format documentation" >> .rspec
 script:
   - rake test:core
   - ci/travis_integration_run.sh
